--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
 		"@fortawesome/free-regular-svg-icons": "^6.2.0",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"boxicons": "^2.1.4",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-icons": "^4.4.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"uuid": "^9.0.0"
